# pinchbench-upgraded

./: .gitignore  LICENSE  README.en.md  README.md  README.zh.md  SCHEMA_README.md  current_model_scope_rules.json  index.html  pyproject.toml  ranking,html
pinchbench_data/current-newest2.0.0-20260520/: .active_version  benchmark_versions.json  leaderboard_current.json
pinchbench_data/current-newest2.0.0-20260520/analysis/current_category_rankings/: current_selected_category_rankings.html  current_selected_category_rankings.json
pinchbench_data/current-newest2.0.0-20260520/analysis/current_model_scope/: current_all_official_models.json  current_model_scope_summary.json
pinchbench_data/current-newest2.0.0-20260520/analysis/current_task_rankings/: current_selected_task_rankings.json
pinchbench_data/current-newest2.0.0-20260520/analysis/version_inventory/: version_inventory_report.json  version_inventory_report.md
src/pinchbench_upgraded/: __init__.py  __main__.py  api_client.py  cache.py  cli.py  config.py  utils.py
src/pinchbench_upgraded/html/: renderer.py
src/pinchbench_upgraded/html/templates/: _filter_bar.html  _fonts.css  base.html  category_rankings.html  task_rankings.html
src/pinchbench_upgraded/steps/: step1_5_inventory.py  step1_fetch.py  step2_model_scope.py  step3_task_rankings.py  step4_category_rankings.py
